# predictive-maintenance

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: main.yml  model-training.yml
api/: main.py  schemas.py
config/: config.yaml  schema.yaml
dashboard/: app.py
monitoring/: prometheus.yml
notebooks/: eda.ipynb
scripts/: download_data.py
src/: mlflow_tracking.py
src/components/: batch_prediction.py  data_conversion.py  data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/constants/: __init__.py
src/pipelines/: conversion_pipeline.py  training_pipeline.py
src/utils/: file_ops.py  logger.py  model_utils.py  mongo_utils.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_data_validation.py  test_model_evaluation.py
